Add support for custom RSQL field selectors in business role definitions